--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
         <div class="col-12 col-sm-6 col-md-6 my-col">
             <div class="header-frame">
                 <div class="header-frame-inside">
-                    <div id="camera_1_wifi_icon" class="WiFi-Svg-DisConnect" width="24" height="24">
+                    <div id="camera_1_wifi_icon" class="Svg-Inactive" width="24" height="24">
                         <svg class="Wifi-Svg" width="22" height="16" viewBox="0 0 22 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M0 5.00001L2 7.00001C6.97 2.03001 15.03 2.03001 20 7.00001L22 5.00001C15.93 -1.06999 6.08 -1.06999 0 5.00001ZM8 13L11 16L14 13C12.35 11.34 9.66 11.34 8 13ZM4 9.00001L6 11C8.76 8.24001 13.24 8.24001 16 11L18 9.00001C14.14 5.14001 7.87 5.14001 4 9.00001Z" fill="currentColor" />
                         </svg>
@@ -54,13 +54,13 @@
                         <div class="body-frame-result">
                             <div class="font-labels">
                                 Inference Results
-                                <div class="result_label font-values" id="camera_1_result_label" data-inferenceCount=0>0</div>
+                                <div class="result_label font-values" id="camera_1_inf_count_label" data-inferenceCount=0>&nbsp;</div>
                             </div>
                         </div>
                         <div class="body-frame-result">
                             <div class="font-labels">
                                 People Detected
-                                <div class="result_label font-values">test</div>
+                                <div class="result_label font-values" id="camera_1_detect_count_label">&nbsp;</div>
                             </div>
                         </div>
                     </div>
@@ -72,7 +72,7 @@
                         <div class="header-camera-name font-subhead">Image</div>
 
                         <div class="header-right-icon-frame">
-                            <button type="button" class="btn btn-image-refresh" id="camera_1_image_refresh" onclick="btnImageRefreshClick(this)" data-streaming=false data-canvasid ='camera_1_canvas'>
+                            <button type="button" class="btn btn-image-refresh" id="camera_1_image_refresh" onclick="btnImageRefreshClick(this)" data-streaming=false>
                                 <div class="font-button-labels">Refresh</div>
                             </button>
                         </div>
@@ -80,8 +80,9 @@
                     <div class="body-frame-canvas font-labels">
                         <div class="container loader-parent my-div-image" id="camera_1_canvas_container">
                             <div class="row justify-content-center align-items-center" style="margin:0;height:100%;width:100%">
-                                <canvas class="my-canvas" id="camera_1_canvas_overlay" style="z-index:300" data-obclass=1></canvas>
-                                <canvas class="my-canvas" id="camera_1_canvas" style="z-index:100;border-color:red !important;border: thin double !important;"></canvas>
+                                <canvas class="my-canvas" id="camera_1_canvas_overlay_message" width="566" height="434" style="z-index:300"></canvas>
+                                <canvas class="my-canvas" id="camera_1_canvas_overlay" style="z-index:200" data-obclass=1></canvas>
+                                <canvas class="my-canvas" id="camera_1_canvas" style="z-index:100"></canvas>
                             </div>
                             <div id="camera_1_canvas_loaderWrapper" class="canvasLoaderWrapper" style="height:100%;width:100%;display:block">
                                 <div class="canvasLoader">
@@ -99,7 +100,7 @@
         <div class="col-12 col-sm-6 col-md-6 my-col">
             <div class="header-frame">
                 <div class="header-frame-inside">
-                    <div id="camera_2_wifi_icon" class="WiFi-Svg-DisConnect" width="24" height="24">
+                    <div id="camera_2_wifi_icon" class="Svg-Inactive" width="24" height="24">
                         <svg class="Wifi-Svg" width="22" height="16" viewBox="0 0 22 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M0 5.00001L2 7.00001C6.97 2.03001 15.03 2.03001 20 7.00001L22 5.00001C15.93 -1.06999 6.08 -1.06999 0 5.00001ZM8 13L11 16L14 13C12.35 11.34 9.66 11.34 8 13ZM4 9.00001L6 11C8.76 8.24001 13.24 8.24001 16 11L18 9.00001C14.14 5.14001 7.87 5.14001 4 9.00001Z" fill="currentColor" />
                         </svg>
@@ -142,13 +143,13 @@
                         <div class="body-frame-result">
                             <div class="font-labels">
                                 Inference Results
-                                <div class="result_label font-values" id="camera_2_result_label" data-inferenceCount=0>0</div>
+                                <div class="result_label font-values" id="camera_2_inf_count_label" data-inferenceCount=0>&nbsp;</div>
                             </div>
                         </div>
                         <div class="body-frame-result">
                             <div class="font-labels">
-                                People Detected
-                                <div class="result_label font-values">test</div>
+                                Cars Detected
+                                <div class="result_label font-values" id="camera_2_detect_count_label">&nbsp;</div>
                             </div>
                         </div>
                     </div>
@@ -159,7 +160,7 @@
                         <img src="~/images/Camera.svg" alt="Image" width="24" height="24" style="vertical-align: text-top;">
                         <div class="header-camera-name font-subhead">Image</div>
                         <div class="header-right-icon-frame">
-                            <button type="button" class="btn btn-image-refresh" id="camera_2_image_refresh" onclick="btnImageRefreshClick(this)" data-streaming=false data-canvasid='camera_2_canvas'>
+                            <button type="button" class="btn btn-image-refresh" id="camera_2_image_refresh" onclick="btnImageRefreshClick(this)" data-streaming=false>
                                 <div class="font-button-labels">Refresh</div>
                             </button>
                         </div>
@@ -167,8 +168,9 @@
                     <div class="body-frame-canvas font-labels">
                         <div class="container loader-parent my-div-image" id="camera_2_canvas_container">
                             <div class="row justify-content-center align-items-center" style="margin:0;height:100%;width:100%">
-                                <canvas class="my-canvas" id="camera_2_canvas_overlay" style="z-index:300" data-obclass=0></canvas>
-                                <canvas class="my-canvas" id="camera_2_canvas" style="z-index:100;border-color:red !important;border: thin double !important;"></canvas>
+                                <canvas class="my-canvas" id="camera_2_canvas_overlay_message" width="566" height="434" style="z-index:300;"></canvas>
+                                <canvas class="my-canvas" id="camera_2_canvas_overlay" style="z-index:200" data-obclass=0></canvas>
+                                <canvas class="my-canvas" id="camera_2_canvas" style="z-index:100"></canvas>
                             </div>
                             <div id="camera_2_canvas_loaderWrapper" class="canvasLoaderWrapper" style="height:100%;width:100%;display:block">
                                 <div class="canvasLoader">
@@ -184,7 +186,7 @@
         <div class="col-12 col-sm-4 col-md-4 my-col">
             <div class="header-frame">
                 <div class="header-frame-inside">
-                    <div id="camera_3_wifi_icon" class="WiFi-Svg-DisConnect" width="24" height="24">
+                    <div id="camera_3_wifi_icon" class="Svg-Inactive" width="24" height="24">
                         <svg class="Wifi-Svg" width="22" height="16" viewBox="0 0 22 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M0 5.00001L2 7.00001C6.97 2.03001 15.03 2.03001 20 7.00001L22 5.00001C15.93 -1.06999 6.08 -1.06999 0 5.00001ZM8 13L11 16L14 13C12.35 11.34 9.66 11.34 8 13ZM4 9.00001L6 11C8.76 8.24001 13.24 8.24001 16 11L18 9.00001C14.14 5.14001 7.87 5.14001 4 9.00001Z" fill="currentColor" />
                         </svg>
@@ -228,7 +230,7 @@
                         <div class="body-frame-result">
                             <div class="font-labels">
                                 Inference Results
-                                <div class="result_label font-values" id="camera_3_result_label" data-inferenceCount=0>0</div>
+                                <div class="result_label font-values" id="camera_3_inf_count_label" data-inferenceCount=0>0</div>
                             </div>
                         </div>
                         <div class="body-frame-result">
@@ -253,6 +255,7 @@
                     <div class="body-frame-canvas font-labels">
                         <div class="container loader-parent my-div-image" id="camera_3_canvas_container">
                             <div class="row justify-content-center align-items-center" style="margin:0;height:100%;width:100%">
+                                <canvas class="my-canvas" id="camera_2_canvas_overlay_message" width="566" height="434" style="z-index:300;"></canvas>
                                 <canvas class="my-canvas" id="camera_3_canvas_overlay" style="z-index:300"></canvas>
                                 <canvas class="my-canvas" id="camera_3_canvas" style="z-index:100;border-color:red !important;border: thin double !important;"></canvas>
                             </div>
@@ -267,7 +270,7 @@
         </div>
         -->
     </div>
-    <div id="divLog" class="row" style="padding-top:28px;">
+    <div id="divLog" class="row" style="padding-top:28px" hidden>
         <div class="col-12 col-sm-12 col-md-12 my-col">
             <div class="header-frame">
                 <div class="header-frame-inside">
@@ -299,9 +302,9 @@
 
     <script type="text/javascript">
 
-        let camera_1_canvas;
-        let canvasContextCamera1;
-        let resizeObserver;
+        //let camera_1_canvas;
+        //let canvasContextCamera1;
+        //let resizeObserver;
         let sliderThresholdCamera1 = document.getElementById("camera_1_confidence_slider");
         let sliderThresholdCamera2 = document.getElementById("camera_2_confidence_slider");
         let sliderThresholdCamera3 = document.getElementById("camera_3_confidence_slider");
@@ -316,6 +319,7 @@
         let camera_2_pending_inference_Count = 0;
         let aiButtonMap = new Map();
         let modelListMap = new Map();
+        let device2canvasMap = new Map();
         const deviceIds = [];
         let bAutoPilot = false;
 
@@ -338,6 +342,10 @@
             modelListMap.set(camera1_id, 'camera_1_model_list');
             modelListMap.set(camera2_id, 'camera_2_model_list');
             modelListMap.set(camera3_id, 'camera_3_model_list');
+
+            device2canvasMap.set(camera1_id, 'camera_1_canvas');
+            device2canvasMap.set(camera2_id, 'camera_2_canvas');
+            device2canvasMap.set(camera3_id, 'camera_3_canvas');
 
             //
             //
@@ -420,14 +428,27 @@
             //ctx.putImageData(data);
         }
 
-        function StartInferences() {
+        function StartAutoPilotClick() {
 
-            StartAllInferences('@(ViewData["Camera_1_ID"])', '@(ViewData["Camera_2_ID"])', '@(ViewData["Camera_3_ID"])');
+            bAutoPilot = true;
+            $(`#autopilot-start`).addClass('Svg-Active');
+            $(`#autopilot-start`).removeClass('Svg-White');
+
+            deviceIds.forEach((deviceId) => {
+                StartUploadInferenceResultWrapper(deviceId);
+            });
         }
 
-        function StopInferences() {
+        function StopAutoPilotClick() {
 
-            StopAllInference('@(ViewData["Camera_1_ID"])', '@(ViewData["Camera_2_ID"])', '@(ViewData["Camera_3_ID"])');
+            bAutoPilot = false;
+            $(`#autopilot-start`).addClass('Svg-White');
+            $(`#autopilot-start`).removeClass('Svg-Active');
+
+            deviceIds.forEach((deviceId) => {
+                HideSpinner(device2canvasMap.get(deviceId));
+                StopUploadInferenceResultWrapper(deviceId);
+            });
         }
 
         function HideOverlay()
