--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,6 +1,6 @@
 :root {
     /* Used color variables */
-    --gray: #c6d0cc;
+    --grey: #c6d0cc;
     --green: #6EDC5F;
     --white: #ffffff;
     --black: #000000;
@@ -11,7 +11,7 @@
     --toggle-size: 24px;
     --toggle-border-thickness: 1px;
     --toggle-color-border: var(--black);
-    --toggle-color-background: var(--gray);
+    --toggle-color-background: var(--grey);
     --toggle-color-ball: var(--white);
     --toggle-border-radius-inner: calc((var(--toggle-size) / 2));
     --toggle-border-radius: calc( var(--toggle-border-radius-inner) + var(--toggle-border-thickness) );
@@ -28,7 +28,6 @@ html {
     border: none;
     position: relative;
     min-height: 100%;
-    background-color: #2a445d !important;
 }
 
 /*debugging
@@ -135,6 +134,7 @@ body {
     line-height: 19px !important;
     align-items: center;
     margin: auto;
+    width: max-content;
 }
 
 .header-frame {
@@ -277,6 +277,7 @@ body {
 }
 
 .body-frame-canvas {
+    position:relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -287,11 +288,19 @@ body {
     width: 100%;
 }
 
+.canvas-container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+}
+
 .separator {
     color: #95b5d4;
     border: 1px solid #95B5D5;
     width: 100%;
-    margin:0;
+    margin: 0;
 }
 
 .txArea-log {
@@ -378,9 +387,10 @@ body {
     position:absolute;
     /*min-width:320px;*/
     padding:0;
-    aspect-ratio: 4/3;
-    object-fit:scale-down;
+    //aspect-ratio: 4/3;
+    object-fit:contain;
     height:100%;
+    width:100%;
 }
 
 .my-slider {
@@ -526,17 +536,17 @@ li.my-nav-header, .my-nav-header, li.nav-item, .nav-item {
     width: 100%;
     height: 100%;
     z-index: 998;
-    background-color: rgba(209,209,209,0.3);
+    background-color: rgba(209,209,209,0.1);
 }
 
 .canvasLoader {
     position: relative;
     z-index: 999;
     margin: auto;
-    left: 50%;
-    top: 50%;
-    width: 100%;
-    height: 100%;
+    left: 25%;
+    top: 55%;
+    width: 50%;
+    height: 50%;
 }
 
     .canvasLoader:before {
@@ -547,8 +557,8 @@ li.my-nav-header, .my-nav-header, li.nav-item, .nav-item {
         left: 0;
         right: 0;
         bottom: 0;
-        width: 100%;
-        height: 100%;
+        width: 50%;
+        height: 50%;
     }
 
     .canvasLoader:not(:required) {
@@ -777,4 +787,107 @@ Animation
         -o-transform: rotate(360deg);
         transform: rotate(360deg);
     }
+}
+
+.my-preloader {
+    display: -ms-flexbox;
+    display: flex;
+    background-color: #c6d0cc !important;
+    height: 100vh;
+    width: 100%;
+    transition: opacity 1s ease !important;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 9999;
+}
+
+.spinnerWrapper {
+    display: -ms-flexbox;
+    display: flex;
+    background-color: rgba(198, 208, 204, 0.4);
+    height: 100vh;
+    width: 100%;
+    transition: opacity 1s ease !important;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 9990;
+}
+
+.spinner {
+
+    opacity: 1;
+    z-index: 9999;
+    display: -ms-flexbox;
+    width: 300px;
+    height: 300px;
+    text-align: center;
+    font-size: 110px;
+    position: absolute;
+    left: calc(50vw - 150px);
+    top: calc(50vh - 150px);
+}
+
+    .spinner > div {
+        z-index: 9999;
+        background-color: var(--status-green);
+        height: 100%;
+        width: 30px;
+        display: inline-block;
+        -webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
+        animation: sk-stretchdelay 1.2s infinite ease-in-out;
+    }
+
+    .spinner .rect2 {
+        -webkit-animation-delay: -1.1s;
+        animation-delay: -1.1s;
+    }
+
+    .spinner .rect3 {
+        -webkit-animation-delay: -1.0s;
+        animation-delay: -1.0s;
+    }
+
+    .spinner .rect4 {
+        -webkit-animation-delay: -0.9s;
+        animation-delay: -0.9s;
+    }
+
+    .spinner .rect5 {
+        -webkit-animation-delay: -0.8s;
+        animation-delay: -0.8s;
+    }
+
+@-webkit-keyframes sk-stretchdelay {
+    0%, 40%, 100% {
+        -webkit-transform: scaleY(0.4)
+    }
+
+    20% {
+        -webkit-transform: scaleY(1.0)
+    }
+}
+
+@keyframes sk-stretchdelay {
+    0%, 40%, 100% {
+        transform: scaleY(0.4);
+        -webkit-transform: scaleY(0.4);
+    }
+
+    20% {
+        transform: scaleY(1.0);
+        -webkit-transform: scaleY(1.0);
+    }
+}
+
+
+.btn.disabled, .btn:disabled {
+    opacity: 0.3 !important;
+}
+
+.link-disabled {
+    pointer-events: none;
+    cursor: default;
+    opacity: 0.6;
 }
